# tools-startup

./: ANNOUNCE  AUTHORS  ChangeLog  CheckGNUstep  ErrorList  INSTALL  InstallGNUstep  Makefile  NEWS  README  Version  configure  configure.ac  home-gdomap.patch  setuperrors  setupvars.in
scripts/: common.sh  docs-gnustep  platform.sh  programs.sh  run-gnustep  test-gnustep
sources/: base-local.patch  libffi-gcc4.2.2.tar.gz.sig  libffi-includes.patch  libffi-includes13.patch
trunk/: ANNOUNCE  CheckGNUstep  ErrorList  ErrorList.awk  Makefile  README  Version  config.h.in  configure.ac  setuperrors
trunk/scripts/: common.sh  docs-gnustep  programs.sh
trunk/sources/: gnustep-objc-1.6.0.tar.gz.sig  libffi-includes.patch
